<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="joshua.dMail.MainActivity">

    <EditText
        style="@style/editText"
        android:id="@+id/mrnEdit"
        android:hint="@string/mrn_holder"
        android:inputType="number"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_alignParentStart="true"/>

    <EditText
        style="@style/editText"
        android:hint="@string/acct_holder"
        android:id="@+id/acctEdit"
        android:inputType="number"
        android:layout_below="@+id/mrnEdit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/button"
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e1"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/conSpinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:text="@string/e1"
        android:layout_toEndOf="@+id/e1"
        android:layout_alignBottom="@+id/e1"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/e2"
        android:labelFor="@id/e2"
        android:inputType="number"
        android:layout_alignBottom="@+id/e1"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:text="@string/e2"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/e2"/>

    <EditText
        style="@style/editText"
        android:id="@+id/notes"
        android:inputType="text"
        android:labelFor="@id/notes"
        android:layout_below="@+id/acctEdit"
        android:hint="@string/notes_hint" />

    <Spinner

        android:id="@+id/conSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/notes" />

</RelativeLayout>
